// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createZeroStepTransformer > snapshot: TypeScript error output format > type-error-output-chunks 1`] = `
[
  {
    "id": "0",
    "type": "text-start",
  },
  {
    "delta": "Greeting: ",
    "id": "0",
    "type": "text-delta",
  },
  {
    "delta": "<code_error>TypeScript error:
Line 2: Type 'number' is not assignable to type 'string'.</code_error>",
    "id": "0",
    "type": "text-delta",
  },
  {
    "finishReason": "stop",
    "type": "finish",
  },
]
`;

exports[`createZeroStepTransformer > snapshot: TypeScript error output format > type-error-output-text 1`] = `
"Greeting: <code_error>TypeScript error:
Line 2: Type 'number' is not assignable to type 'string'.</code_error>"
`;

exports[`createZeroStepTransformer > snapshot: successful execution output format > success-output-chunks 1`] = `
[
  {
    "id": "0",
    "type": "text-start",
  },
  {
    "delta": "Greeting: ",
    "id": "0",
    "type": "text-delta",
  },
  {
    "delta": "<code_response>Hello, Alice!</code_response>",
    "id": "0",
    "type": "text-delta",
  },
  {
    "finishReason": "stop",
    "type": "finish",
  },
]
`;

exports[`createZeroStepTransformer > snapshot: successful execution output format > success-output-text 1`] = `"Greeting: <code_response>Hello, Alice!</code_response>"`;

exports[`defMethod (integration via runPrompt) > snapshot: full prompt steps for a TypeScript error in defMethod > type-error-defMethod-steps 1`] = `
[
  {
    "activeTools": [],
    "input": {
      "prompt": [
        {
          "content": "<zero_step_methods>
# Zero-Step Methods

You can call the following methods directly in your response by writing
JavaScript code inside <run_code> XML tags.

Rules:
- Use \`await\` for all method calls (they are async).
- If you need to return a value to the conversation, end the block with a \`return\` statement.
- If no \`return\` is present, execution runs silently and the stream continues.
- Errors are reported inside <code_error> tags.

## Available Methods

### fetchUser
Fetch user by ID

</zero_step_methods>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "Get user 999",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "<run_code>
const user = await fetchUser({ id: 999 });
return user.name;
</run_code>",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`defMethod (integration via runPrompt) > snapshot: full prompt steps for a successful defMethod execution > successful-defMethod-steps 1`] = `
[
  {
    "activeTools": [],
    "input": {
      "prompt": [
        {
          "content": "<zero_step_methods>
# Zero-Step Methods

You can call the following methods directly in your response by writing
JavaScript code inside <run_code> XML tags.

Rules:
- Use \`await\` for all method calls (they are async).
- If you need to return a value to the conversation, end the block with a \`return\` statement.
- If no \`return\` is present, execution runs silently and the stream continues.
- Errors are reported inside <code_error> tags.

## Available Methods

### fetchUser
Fetch user by ID

</zero_step_methods>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "Who is user 42?",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "I found:
<run_code>
const user = await fetchUser({ id: "42" });
return user.name;
</run_code>
Done.",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`defMethod (integration via runPrompt) > snapshot: system prompt includes generated type declarations for each method > two-method-system-prompt 1`] = `
"# Zero-Step Methods

You can call the following methods directly in your response by writing
JavaScript code inside <run_code> XML tags.

Rules:
- Use \`await\` for all method calls (they are async).
- If you need to return a value to the conversation, end the block with a \`return\` statement.
- If no \`return\` is present, execution runs silently and the stream continues.
- Errors are reported inside <code_error> tags.

## Available Methods

### fetchUser
Fetch user by ID

### add
Add two numbers
"
`;

exports[`generateTypeDeclarations > generates declarations for multiple methods > multi-method-declarations 1`] = `
"declare function add(args: {
    a: number;
    b: number;
}): Promise<number>;

declare function greet(args: {
    name: string;
}): Promise<string>;"
`;

exports[`generateTypeDeclarations > generates declare function for a simple method > single-method-declarations 1`] = `
"declare function fetchUser(args: {
    id: string;
}): Promise<{
    name: string;
    role: string;
}>;"
`;

exports[`validateTypeScript > rejects accessing property that does not exist on return type > nonexistent-prop-errors 1`] = `
[
  {
    "code": 2339,
    "codeLine": "return user.nonExistentProp;",
    "column": 13,
    "line": 2,
    "message": "Property 'nonExistentProp' does not exist on type '{ name: string; role: string; }'.",
  },
]
`;

exports[`validateTypeScript > rejects wrong argument type (null for string) > null-id-errors 1`] = `
[
  {
    "code": 2322,
    "codeLine": "const user = await fetchUser({ id: null });",
    "column": 32,
    "line": 1,
    "message": "Type 'null' is not assignable to type 'string'.",
  },
]
`;

exports[`validateTypeScript > rejects wrong argument type (number for string) > number-id-errors 1`] = `
[
  {
    "code": 2322,
    "codeLine": "const user = await fetchUser({ id: 42 });",
    "column": 32,
    "line": 1,
    "message": "Type 'number' is not assignable to type 'string'.",
  },
]
`;
